force-app/main/default/objects/FEC_MDM_Additional_Field_List_Value__c/fields/FEC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Code__c</fullName>
    <externalId>true</externalId>
    <label>FEC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>