force-app/main/default/objects/FEC_MDM_Additional_Field_List_Value__c/fields/FEC_MDM_Additional_Field_c__c.field-meta.xml
<CustomField>
    <fullName>FEC_MDM_Additional_Field_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FEC_MDM_Additional_Field__c</label>
    <referenceTo>FEC_MDM_Additional_Field__c</referenceTo>
    <relationshipLabel>FEC MDM  Additional Field List Value</relationshipLabel>
    <relationshipName>FEC_MDM_Additional_Field_List_Value</relationshipName>
    <type>Lookup</type>
</CustomField>